--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255; /* 白色文字 */
+  --background-start-rgb: 20, 20, 20; /* 墨黑 */
+  --background-end-rgb: 0, 0, 0; /* 纯黑 */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
+    --background-start-rgb: 20, 20, 20;
     --background-end-rgb: 0, 0, 0;
   }
 }
@@ -20,10 +20,9 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
-      transparent,
+      rgb(var(--background-start-rgb)),
       rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    );
 }
 
 @layer utilities {
